gpgol one string not translated
Testing, NormalPublic

Assigned To
Authored By
ebo
Oct 2 2025, 11:16 AM

Description

For the tooltip string

Instead of using the PGP/MIME format, which properly handles attachments and 
encoding, the deprecated PGP/Inline is used.\n
This can be required for compatibility but should generally not be used.

no German translation is shown:

But there is a translation is in gpgol's de.po

Details

Version
VSD 3.3.2, 3.3.3-beta-16, …

Revisions and Commits

Event Timeline

ebo triaged this task as Normal priority.Oct 2 2025, 11:16 AM
ebo created this task.
ebo created this object with edit policy "Contributor (Project)".
ikloecker moved this task from Backlog to WIP on the gpd5x board.
ikloecker moved this task from Backlog to WIP on the vsd34 board.
ikloecker mentioned this in Unknown Object (Maniphest Task).Oct 6 2025, 9:16 AM
ikloecker changed the task status from Open to Testing.Oct 6 2025, 2:19 PM
timegrid added a subscriber: timegrid.

Issue is still present in gpg4win-5.0.0-beta395 @ win11:

That's not surprising. The fix was made after GpgOL 2.6.7. And gpg4win-5.0.0-beta395 still seems to include GpgOL 2.6.6 only.

Looks good to me on gpg4win-5.0.0-beta413 @ win11