Fix text of tooltip in gpg4win-tools

* src/addin-options.cpp (i18n_noops): Update text of tooltip.
--

This fixes the problem that the tooltip wasn't translated.

GnuPG-bug-id: 7834